--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 
 body{
-
 	background-color: #121317;
 	background-color: #1D1D1D;
 }
@@ -14,7 +13,6 @@ button{
 }
 button:hover{
 	background-color: #404040;
-	
 }
 button:active{
 	transform: translateY(2px);	
@@ -35,7 +33,7 @@ button:active{
 	grid-column: span 4;
 	background-color: #090909;
 }
-#display-actual{
+#display-current{
 	text-align: right;
 	grid-column: span 3;
 	background-color: #090909;
